# market-simulator

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: main.py  routes.py
bots/: base.py  run.py
bots/strategies/: random_bot.py
core/: matching_engine.py  order.py  order_book.py  trade.py
db/: repository.py  schema.sql
tests/: test_bots.py  test_matching.py  test_order_book.py  test_trade.py
