[project]
name = "market-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sortedcontainers>=2.4.0",
    "uvicorn>=0.46.0",
]
