[project]
name = "market-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sortedcontainers>=2.4.0",
    "typer>=0.25.1",
    "uvicorn>=0.46.0",
]
